fix spacing on examples

--- a/capture-map-area/demo.css
+++ b/capture-map-area/demo.css
@@ -6,7 +6,7 @@
 
 #panel {
     width: 100%;
-    height: 400px;
+    height: 160px;
 }
 
 .btn-group {
